# computer-vision

./: .gitignore
Alex/: parse_label.py  positive_blue.txt  positive_red.txt  rm-yolov3-tiny.cfg  rm-yolov3.cfg  rm.data  rm.names  test.txt  train.txt
Carlo/: Draft1.ipynb  cv.ipynb  detect_lightbars.ipynb  detect_lightbars.py  detect_shapes.py  lightbar_detection.py
Carlo/.ipynb_checkpoints/: detect_lightbars-checkpoint.ipynb  detect_lightbars-checkpoint.py
Geyan/: Recognition_Armor.cpp
Kurtis/GPU_Project/: blur_gpu.cu  blur_gpu.h
Kurtis/GetArmorColor/: getArmorColor.py
Kurtis/TeachingSession1/: detectYellowObject.py
Qianli/: detect_shapes.py  lightdetection.py
Teaching Sessions/Open Session 1/: robomasters-cvintro.ipynb
WilliamAn/session1/: main.py
Williams/armor-detection/: Armor.cpp  Armor.h  CMakeLists.txt  I2C.h  SearchArea.h  Settings.cpp  Settings.h  UART.h  armor-detection.cpp  config.xml
Williams/armor-detection-cascade/: Armor.cpp  Armor.h  README  Settings.cpp  Settings.h  armor-detection.cpp  cascade.xml  config.xml
Williams/camera-calibration/: CMakeLists.txt  camera-after-calibration.cpp  camera-calibration-test.cpp  default.xml  out_camera_data.xml
Williams/cascade-classifier-test/: CMakeLists.txt  cascade.xml  main.cpp
Williams/opencv-test/: CMakeCache.txt  CMakeLists.txt  Makefile  armor-detection.cpp  camera-calibration-test  camera-calibration-test.cpp  camera-test  camera-test.cpp  cmake_install.cmake  histogram-equalization.cpp  hsv-test.cpp  main.cpp  opencv-test  opencv-test.cbp  opencv-test1  opencv-test1.cbp  opencv-test1.cpp  opencv-test2  opencv-test2.cpp  opencv-test3  opencv-test3.cpp  opencv-test4.cpp  opencv-test5.cpp  opencv-test6.cpp  opencv-test7.cpp  opencv-test8.cpp  settings-test.cpp
Williams/opencv-test2/: CMakeLists.txt  main.cpp
Williams/svm-test/: CMakeLists.txt  main.cpp
Williams/tools/: CMakeLists.txt  main.cpp
Yi/: main.py
