cmake_minimum_required(VERSION 3.5)
project(armor-detection)
IF (WIN32)
    set(OPENCV_DIR "C:/Program Files (x86)/opencv/build/x64/vc15")
ENDIF ()
find_package(OpenCV REQUIRED)
#find_package(OpenMP)
#set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
#set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
#set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
add_executable(armor-detection armor-detection.cpp Armor.h SearchArea.h Settings.cpp Settings.h I2C.h)
target_link_libraries(armor-detection ${OpenCV_LIBS})
