cmake_minimum_required(VERSION 3.5)
project(opencv-test)
IF (WIN32)
	set(OPENCV_DIR "C:/Program Files (x86)/opencv/build/x64/vc15")
ENDIF()
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_STANDARD 11)
add_executable(opencv-test1 opencv-test1.cpp)
target_link_libraries(opencv-test1 ${OpenCV_LIBS})
add_executable(opencv-test2 opencv-test2.cpp)
target_link_libraries(opencv-test2 ${OpenCV_LIBS})
add_executable(opencv-test3 opencv-test3.cpp)
target_link_libraries(opencv-test3 ${OpenCV_LIBS})
add_executable(opencv-test4 opencv-test4.cpp)
target_link_libraries(opencv-test4 ${OpenCV_LIBS})
add_executable(opencv-test5 opencv-test5.cpp)
target_link_libraries(opencv-test5 ${OpenCV_LIBS})
add_executable(camera-test camera-test.cpp)
target_link_libraries(camera-test ${OpenCV_LIBS})
add_executable(camera-calibration-test camera-calibration-test.cpp)
target_link_libraries(camera-calibration-test ${OpenCV_LIBS})
add_executable(hsv-test hsv-test.cpp)
target_link_libraries(hsv-test ${OpenCV_LIBS})