cmake_minimum_required(VERSION 3.5)
project(opencv-test2)
find_package( OpenCV REQUIRED )
#find_package(OpenMP)
#if (OPENMP_FOUND)
#    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
#    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
#    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
#endif()
set(CMAKE_CXX_STANDARD 11)
add_executable(opencv-test2 main.cpp)
target_link_libraries( opencv-test2 ${OpenCV_LIBS} )